# professor-posture-purrfect

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: PetOverlay.tsx  SpeechBubble.tsx
src/data/: messages.ts
src/store/: preferences.ts
