[package]
name = "professor-posture-purrfect"
version = "0.1.0"
description = "A cute macOS menu bar app that reminds you to fix your posture"
authors = ["you"]
edition = "2021"

[lib]
name = "professor_posture_purrfect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
